# SignalLibrary

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerFlags.cmake  Doxyfile.in  FindLibraries.cmake  Options.cmake  PrintInfo.cmake  Tests.cmake
include/: CMakeLists.txt  Delegate.hpp  Emitter.hpp  Signal.hpp  emitter.hpp  signal.hpp  signal_exceptions.hpp
src/: CMakeLists.txt  Delegate.cpp  Emitter.cpp  SignalExceptions.cpp  delegate.cpp  emitter.cpp  signal_exceptions.cpp
tests/: CMakeLists.txt  tests_main.cpp
tests/common/: CMakeLists.txt  PerformanceTests.cpp
tests/include/: EmitterPerson.hpp  QSignalPerson.hpp  QSlotPerson.hpp  SlotPerson.hpp
tests/src/: QSignalPerson.cpp  QSlotPerson.cpp  SlotPerson.cpp
