IF(BUILD_TESTS AND GTEST_FOUND)

   INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})

   LINK_LIBRARIES(${GTEST_BOTH_LIBRARIES})

   FILE(GLOB srcs "*.cpp")
   ADD_EXECUTABLE(tests ${srcs})

   IF(ENABLE_COVERAGE)
      SETUP_TARGET_FOR_COVERAGE(coverageHtml  tests coverage)
   ENDIF()

ELSEIF(NOT GTEST_FOUND)
   MESSAGE(WARNING "GTest is not installed")
ENDIF()

